Consolidate mandatory XWiki Rights/Preferences